--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body,
 html {
   width: 100%;
-  height: 100%; 
+  height: 100%;
 }
 
 body {
@@ -12,11 +12,11 @@ body {
 hr {
   max-width: 65px;
   border-width: 3px;
-  border-color: #F05F44; 
+  border-color: #F05F44;
 }
 
 .faded {
-  color: rgba(255, 255, 255, 0.8); 
+  color: rgba(255, 255, 255, 0.8);
 }
 
 header.startup {
@@ -27,12 +27,12 @@ header.startup {
 }
 
 header.startup hr {
-  margin-top: 200px;
-  margin-bottom: 30px; 
+	margin-top: 225px;
+	margin-bottom: 23px;
 }
 
 header.startup h1 {
-  font-size: 2rem; 
+  font-size: 2rem;
 }
 
 .btn {
@@ -43,7 +43,7 @@ header.startup h1 {
 }
 
 .btn-xl {
-  padding: 1rem 2rem; 
+  padding: 1rem 2rem;
 }
 
 .btn-primary {
@@ -52,8 +52,11 @@ header.startup h1 {
 
 .btn-primary:hover {
   background-color: #ee4b08;
-  border-color: #ee4b08;
-  border-width: 5px;
   cursor: pointer;
 }
-  
+#mc_embed_signup form {
+	display: block;
+	position: relative;
+	text-align: center;
+	padding: 10px 0 20px 0%;
+}
