style.css update

--- a/Myapp_files/css/style.css
+++ b/Myapp_files/css/style.css
@@ -1,10 +1,10 @@
 /* ==============================================================
 
-Theme Name	: Appcraft HTML
-Theme URI	: Minimal Themes
-Author		: Minimal Themes
-Author URI	: https://themeforest.net/user/minimalthemes
-Description	: Responsive Portfolio Template
+Theme Name	: Mamun HTML
+Theme URI	: Mamun Themes
+Author		: Mamun Themes
+Author URI	: https://mamun.net/user/minimalthemes
+Description	: Responsive Mamun Template
 Version		: 1.0.0
 
 =================================================================
